# fsedc

./: .editorconfig  .gitignore  README.md  agent.py  chat.py  crawlers.py  database.py  fsgeodata.txt  main.py  models.py  pyproject.toml  seed.py
.docker/: compose.yml
.docker/pgsql/: Dockerfile  compose.yml
metaport/: index.html  package.json
metaport/src/: App.jsx
metaport/src/components/: Footer.jsx  Header.jsx
