[project]
name = "fsedc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "arrow>=1.3.0",
    "bs4>=0.0.2",
    "lxml>=5.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-ai>=0.0.19",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "hatch>=1.14.0",
    "pipx>=1.7.1",
    "pytest-sugar>=1.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
